--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,38 +5,29 @@ on:
     branches: [ "develop", "staging" ]
 
 jobs:
-  # 1. Job за изграждане и модулни тестове (за develop)
-  build_and_unit_tests:
-    if: github.ref_name == 'develop' 
+  build_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: 6.0.x
+          
       - name: Restore dependencies
         run: dotnet restore
+        
       - name: Build
         run: dotnet build --no-restore
-      - name: Run Unit Tests
+        
+      # 1. Изпълнение на модулни тестове (САМО ако е develop)
+      - name: Run Unit Tests (develop branch)
+        if: github.ref_name == 'develop'
         run: dotnet test --no-build --filter Category=Unit --verbosity normal
         
-  # 2. Job за изграждане и интеграционни тестове (за staging)
-  build_and_integration_tests:
-    if: github.ref_name == 'staging'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 6.0.x
-      - name: Restore dependencies
-        run: dotnet restore
-      - name: Build
-        run: dotnet build --no-restore
-      - name: Run Integration Tests
+      # 2. Изпълнение на интеграционни тестове (САМО ако е staging)
+      - name: Run Integration Tests (staging branch)
+        if: github.ref_name == 'staging'
         run: dotnet test --no-build --filter Category=Integration --verbosity normal
