Add comment for exam date in pipeline.yml

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,3 +31,4 @@ jobs:
       - name: Run Integration Tests (staging branch)
         if: github.ref_name == 'staging'
         run: dotnet test --no-build --filter Category=Integration --verbosity normal
+    # Exam-2025-4-15
